[project]
name = "Whitelist"
version = "0.0.1"

description = "A package allowing the bot to be exclusive to specefic servers/guilds"
license = "MIT"  # replace with your own license
license-files = ["LICENSE"]
authors = [
    { name = "bricksking", email = bricksking628@gmail.com },
]
readme = "README.md"

dependencies = []

[project.urls]

Homepage = "https://github.com/BricksKing/bd-whitelist"
